# pufferwatch

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cd.yaml  ci.yaml  release.yaml
logs/: invalid.txt  long.txt  short.txt
src/: ast.rs  config.rs  encoded_writer.rs  events.rs  install_path.rs  log.rs  main.rs  parse.rs  source.rs  startup.rs  widgets.rs
src/widgets/: command_input.rs  controls.rs  formatted_log.rs  icons.rs  lazy_paragraph.rs  raw_log.rs  root.rs  scrollbar.rs  state.rs
