[package]
name = "pufferwatch"
version = "0.1.3"
edition = "2021"
description = """
A CLI application for filtering and monitoring SMAPI logs.
"""
publish = false

[dependencies]
# Errors
anyhow = "1"
# Parsing
nom = "7"
clap = { version = "3", features = ["cargo"] }
# UI
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.25", features = ["serde"] }
unicode-width = "0.1"
# Utility
itertools = "0.10"
crossbeam = "0.8"
indexmap = "1"
dirs = "4"
notify = "5"
hotwatch = "0.4"
ouroboros = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Web client
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "socks",
] }
