[package]
name = "pufferwatch"
version = "0.2.0"
edition = "2021"
description = "A CLI application for filtering and monitoring SMAPI logs."
publish = false

[dependencies]
# Errors
anyhow = "1"

# Parsing
nom = "7"
clap = { version = "4", features = ["derive", "cargo", "deprecated"] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.25", features = ["encoding", "serialize"] }

# UI
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.25", features = ["serde"] }
unicode-width = "0.1"

# Utility
itertools = "0.10"
crossbeam = "0.8"
indexmap = "1"
dirs = "4"
notify = "5"
ouroboros = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web client
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "socks",
] }

[target.'cfg(windows)'.dependencies]
# Utility
winreg = { version = "0.10" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
